Set scrollbar-gutter: stable on body to prevent jumping content in documentation iframe.

--- a/web/devpi_web/static/style.css
+++ b/web/devpi_web/static/style.css
@@ -15,6 +15,7 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    scrollbar-gutter: stable;
 }
 
 pre, table {
